<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

<data>
    <import type="android.view.View" />


    <variable
        name="imageUrl"
        type="String" />
</data>

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:scaleType="fitCenter"
        android:id="@+id/full_image"
        android:layout_margin="@dimen/margin_normal"
        android:layout_centerInParent="true"
        app:fullImage="@{imageUrl}"
        android:adjustViewBounds="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</RelativeLayout>
</layout>