<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View" />


        <variable
            name="viewModel"
            type="in.paws.viewmodels.CategoryImageViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/image_list"
            android:visibility="@{viewModel.displayMessage? View.INVISIBLE : View.VISIBLE}"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:paddingBottom="@dimen/margin_normal"
            android:paddingTop="@dimen/margin_normal"
            tools:context=".activities.MainActivity"
            tools:listitem="@layout/image_list_item" />



        <TextView
            android:layout_margin="16dp"
            android:gravity="center"
            android:text="@{viewModel.message != null? viewModel.message :`loading...` }"
            android:textColor="@color/colorAccent"
            android:visibility="@{viewModel.displayMessage? View.VISIBLE : View.GONE}"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>



</layout>