...
            <!--android:background="@android:color/white" />-->

    <!--</com.google.android.material.appbar.AppBarLayout>-->


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/paws_list"
        android:visibility="@{viewModel.displayMessage? View.INVISIBLE : View.VISIBLE}"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:paddingBottom="@dimen/margin_normal"
        android:paddingTop="@dimen/margin_normal"
...
